; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_rtw8822c.c_rtw8822c_set_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_rtw8822c.c_rtw8822c_set_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtw_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtw_dev*, i32, i32, i32)* @rtw8822c_set_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtw8822c_set_channel(%struct.rtw_dev* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.rtw_dev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.rtw_dev* %0, %struct.rtw_dev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.rtw_dev*, %struct.rtw_dev** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @rtw8822c_set_channel_bb(%struct.rtw_dev* %9, i32 %10, i32 %11, i32 %12)
  %14 = load %struct.rtw_dev*, %struct.rtw_dev** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @rtw_set_channel_mac(%struct.rtw_dev* %14, i32 %15, i32 %16, i32 %17)
  %19 = load %struct.rtw_dev*, %struct.rtw_dev** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @rtw8822c_set_channel_rf(%struct.rtw_dev* %19, i32 %20, i32 %21)
  %23 = load %struct.rtw_dev*, %struct.rtw_dev** %5, align 8
  %24 = call i32 @rtw8822c_toggle_igi(%struct.rtw_dev* %23)
  ret void
}

declare dso_local i32 @rtw8822c_set_channel_bb(%struct.rtw_dev*, i32, i32, i32) #1

declare dso_local i32 @rtw_set_channel_mac(%struct.rtw_dev*, i32, i32, i32) #1

declare dso_local i32 @rtw8822c_set_channel_rf(%struct.rtw_dev*, i32, i32) #1

declare dso_local i32 @rtw8822c_toggle_igi(%struct.rtw_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
